--- a/.github/workflows/nodeaction.js.yml
+++ b/.github/workflows/nodeaction.js.yml
@@ -2,26 +2,22 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
-    name: lint code Base
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout Code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env: 
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+      - name: Install dependencies
+        run: yarn
+      - run: yarn run build
+      - run: yarn run test
 
 
