--- a/.github/workflows/nodeaction.js.yml
+++ b/.github/workflows/nodeaction.js.yml
@@ -2,22 +2,17 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]
   pull_request:
-    branches: [ main ]
+    branches: [ master, main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-      - name: Install dependencies
-        run: yarn
-      - run: yarn run build
-      - run: yarn run test
-
+      - name: Install modules
+        run: npm install
+      - name: Run ESLint
+        run: npm run lint
 
